--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
       
       <div class="popup__content">
        
-        <img src ="<%=require('./images/logo.svg').default%>"  class="popup__close">
-          <!--форма редактировать профмль-->
+  <img src="<%=require('./images/close.svg').default%>""  class="popup__close">
+        <!--форма редактировать профмль-->
         <h3 class="popup__title">Новое место</h3>
         <form class="popup__form" name="new" novalidate>
           <!-- Надо исправить: ID name-card не должен использоваться повторно -->
